tests/fixtures/invalid/bytes_rshift_str.py
# Cannot right shift Bytes and Str
x: bytes = b"hello" >> "hello"
